--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Log settings (TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF)
 logging.level.ru.ulstu=DEBUG
 # JPA Settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/subd-lab
+spring.datasource.url=jdbc:postgresql://localhost:5432/students
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create
