--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Log settings (TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF)
 logging.level.ru.ulstu=DEBUG
 # JPA Settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/students
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/accounting
+spring.datasource.username=Lyays
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
